fix broken layout in safari

--- a/web/sites/all/modules/onlinekurslabor/nm_stream/css/nm_stream_v2.css
+++ b/web/sites/all/modules/onlinekurslabor/nm_stream/css/nm_stream_v2.css
@@ -165,6 +165,10 @@
   font-weight: bold;
 }
 
-#stream  .poll-container > .col-12 {
+#stream .poll-container > .col-12 {
   padding: 0;
+}
+
+#stream .row:before, #stream .row:after {
+  width: 0;
 }
